# kafka-messaging

./: Dockerfile  docker-compose.yml  pyproject.toml
kafka/: config.py  main.py  router_file.py  schema.py
